# Inventory_Snap

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_item_floor_plan_pins.py  0003_item_floor_plan_pin_instances.py  0004_photo_pins.py  0005_site_icon.py
backend/app/: config.py  deps.py  main.py
backend/app/ai/: base_provider.py  image_utils.py  pipeline.py  provider_factory.py
backend/app/ai/providers/: claude_provider.py  ollama_provider.py  openai_provider.py
backend/app/api/: router.py
backend/app/api/v1/: auth.py  export.py  items.py  locations.py  photos.py  review.py  sites.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  audit.py  export.py  item.py  location.py  movement.py  photo.py  proposed.py  site.py  user.py
backend/app/schemas/: auth.py  export.py  item.py  location.py  movement.py  photo.py  review.py  site.py
backend/app/services/: auth_service.py  photo_service.py  rbac_service.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: ai_processing.py  export_generation.py  thumbnail.py
frontend/: capacitor.config.ts  index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  router.tsx  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/db/: db.ts  schema.ts
frontend/src/hooks/: useCamera.ts  useOnlineStatus.ts  useSwipeGesture.ts
frontend/src/lib/: constants.ts  contacts.ts  types.ts  utils.ts
frontend/src/store/: authStore.ts  cameraStore.ts  offlineStore.ts  siteStore.ts
frontend/src/styles/: globals.css
infra/nginx/: nginx.conf
infra/postgres/: init.sql
(+60 files in other folders)
