[project]
name = "inventory-snap-backend"
version = "0.1.0"
description = "Inventory Snap backend — FastAPI + PostgreSQL + MinIO + Celery"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",

    # Validation / settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "email-validator>=2.1.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.0,<4.0.0",

    # Object storage (MinIO / S3)
    "boto3>=1.34.0",
    "Pillow>=10.4.0",

    # Redis
    "redis>=5.0.0",

    # Celery
    "celery[redis]>=5.4.0",
    "flower>=2.0.0",

    # AI providers
    "httpx>=0.27.0",
    "openai>=1.40.0",
    "anthropic>=0.34.0",

    # Export
    "openpyxl>=3.1.0",

    # Rate limiting
    "slowapi>=0.1.9",

    # Utilities
    "python-dateutil>=2.9.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=26.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
